# ISAC

./: CMakeLists.txt  application.cpp  application.h  audiohandler.cpp  audiohandler.h  isac.rar  isaccodec.cpp  isaccodec.h  main.cpp  test_audiohandler.cpp
audio/: input.raw
include/include_old/: isac.h  signal_processing_library.h  typedefs.h
lib/: isac (old).lib  isac.lib
test/: Команды для кодирования и декодирования.txt
webrtc/base/: arraysize.h  asynchttprequest.h  asyncinvoker-inl.h  asyncinvoker.h  asyncpacketsocket.h  asyncsocket.h  asynctcpsocket.h  asyncudpsocket.h  autodetectproxy.h  bandwidthsmoother.h  basictypes.h  bitbuffer.h  buffer.h  checks.h  common.h  constructormagic.h  cpumonitor.h  criticalsection.h  cryptstring.h  event_tracer.h  fileutils.h  httpclient.h  httpcommon.h  httpserver.h  ipaddress.h  macasyncsocket.h  maccocoasocketserver.h  macutils.h  md5.h  messagequeue.h  multipart.h  natserver.h  natsocketfactory.h  network.h  nssidentity.h  nssstreamadapter.h  openssladapter.h  opensslidentity.h  opensslstreamadapter.h  physicalsocketserver.h  (+29 more)
webrtc/modules/audio_coding/codecs/: audio_decoder.h  audio_encoder.h
webrtc/modules/audio_coding/codecs/cng/include/: audio_encoder_cng.h
webrtc/modules/audio_coding/codecs/isac/: audio_encoder_isac_t.h  audio_encoder_isac_t_impl.h
webrtc/modules/audio_coding/codecs/isac/fix/interface/: audio_encoder_isacfix.h
webrtc/modules/audio_coding/codecs/isac/main/interface/: audio_encoder_isac.h
webrtc/system_wrappers/interface/: critical_section_wrapper.h
